--- a/style.css
+++ b/style.css
@@ -524,9 +524,10 @@ h6 {
     padding: 80px 0;
 } */
 
-.footer {
+
+/* .footer {
     text-align: center;
-}
+} */
 
 .footer-link li {
     list-style: none;
